--- a/core/templates/core/signup.html
+++ b/core/templates/core/signup.html
@@ -3,69 +3,87 @@
 
 {% block title %} Signup{% endblock  %}
 
-{% block core %}
-<section>
-    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-       
-        <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-            <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-                <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                    Create and account
-                </h1>
-                <form method="post" class="space-y-4 md:space-y-6" action=".">
-                    {% csrf_token%}
-                    <div>
-                        <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your Username</label>
-                        {{form.username}}
-                    </div>
-                    <div>
-                        <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
-                        {{form.email}}
-                    </div>
-                    <div>
-                        <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-                        {{form.password1}}
-                    </div>
-                    <div>
-                        <label for="confirm-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Confirm password</label>
-                        {{form.password2}}
-                    </div>
-                    {% if form.errors or form.non_field_errors %}
-                      {% for field  in form  %}
-                      <div id="alert-border-1" class="flex items-center p-4 mb-4 text-blue-800 border-t-4 border-blue-300 bg-blue-50 dark:text-blue-400 dark:bg-gray-800 dark:border-blue-800" role="alert">
-                        <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                          <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
-                        </svg>
-                        <div class="ms-3 text-sm font-medium">
-                          {{field.errors}}
-                        </div>
-                        <button type="button" class="ms-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-blue-400 dark:hover:bg-gray-700" data-dismiss-target="#alert-border-1" aria-label="Close">
-                          <span class="sr-only">Dismiss</span>
-                          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                          </svg>
-                        </button>
-                    </div>
-                      {% endfor %}
-                      {{form.non_field_errors}}
-                    {% endif %}
-                    <div class="flex items-start">
-                        <div class="flex items-center h-5">
-                          <input id="terms" aria-describedby="terms" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" required="">
-                        </div>
-                        <div class="ml-3 text-sm">
-                          <label for="terms" class="font-light text-gray-500 dark:text-gray-300">I accept the <a class="font-medium text-primary-600 hover:underline dark:text-primary-500" href="#">Terms and Conditions</a></label>
-                        </div>
-                    </div>
-                    <button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Create an account</button>
-                    <p class="text-sm font-light text-gray-500 dark:text-gray-400">
-                        Already have an account? <a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">Login here</a>
-                    </p>
-                </form>
-            </div>
+
+{%block core%}
+{% if form.errors or form.non_field_errors %}
+{% for field  in form  %}
+
+{{field.errors}}
+{% endfor %}
+<div id="alert-border-1" class="flex items-center p-4 mb-4 text-blue-800 border-t-4 border-white-300 bg-white-50 dark:text-white-400 dark:bg-white-800 dark:border-white-800" role="alert">
+  <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+  </svg>
+  <div class="center ms-3 text-sm font-medium">
+  <center> {{form.non_field_errors}}</center> 
+  </div>
+  
+</div>
+
+{% endif %}
+<div class="mx-auto max-w-screen-xl px-4 py-16 sm:px-6 lg:px-8">
+  <div class="mx-auto max-w-lg">
+    <h1 class="text-center text-2xl font-bold text-indigo-600 sm:text-3xl">Create an acount !</h1>
+
+    <p class="mx-auto mt-4 max-w-md text-center text-gray-500">
+      Find your favorite items with us 
+    </p>
+
+    <form method="post" action="." class="mb-0 mt-6 space-y-4 rounded-lg p-4 shadow-lg sm:p-6 lg:p-8">
+     {% csrf_token%}
+      <p class="text-center text-lg font-medium">Sign in to your account</p>
+
+      <div>
+        <label for="username" class="sr-only">Email</label>
+
+        <div class="relative">
+          {{form.username}}
+
+          
         </div>
-    </div>
-  </section>
+      </div>
+
+      <div>
+        <label for="email" class="sr-only">Email</label>
+
+        <div class="relative">
+          {{form.email}}
+
+          
+        </div>
+      </div>
+
+      <div>
+        <label for="password1" class="sr-only">Password</label>
+
+        <div class="relative">
+          {{form.password1}}
+
+          
+        </div>
+      </div>
+      <div>
+        <label for="password2" class="sr-only">Password</label>
+
+        <div class="relative">
+          {{form.password2}}
+
+          
+        </div>
+      </div>
+
+      <button
+        type="submit"
+        class="block w-full rounded-lg bg-indigo-600 px-5 py-3 text-sm font-medium text-white"
+      >
+        Sign up
+      </button>
+
+      <p class="text-center text-sm text-gray-500">
+        already have an acount ?
+        <a class="underline" href="{% url 'core:login' %}">Sign in</a>
+      </p>
+    </form>
+  </div>
+</div>
 {% endblock  %}
-
-
